--- a/gst-plugins-base/po/ca.po
+++ b/gst-plugins-base/po/ca.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-base 0.9.7\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-08-05 00:36+0100\n"
+"POT-Creation-Date: 2009-08-13 10:58+0100\n"
 "PO-Revision-Date: 2005-12-04 22:00+0100\n"
 "Last-Translator: Jordi Mallach <jordi@sindominio.net>\n"
 "Language-Team: Catalan <ca@dodds.net>\n"
@@ -125,6 +125,10 @@ msgstr ""
 msgid "This appears to be a text file"
 msgstr ""
 
+#, fuzzy
+msgid "Could not determine type of stream"
+msgstr "No s'ha pogut crear l'element «decodebin»."
+
 #, c-format
 msgid "Invalid subtitle URI \"%s\", subtitles disabled."
 msgstr ""
@@ -175,8 +179,20 @@ msgstr ""
 msgid "Both autoaudiosink and alsasink elements are missing."
 msgstr "Manca tant l'element autoaudiosink com el alsasink."
 
+#, fuzzy, c-format
+msgid "Both autovideosink and %s elements are missing."
+msgstr "Manca tant l'element autovideosink com el xvimagesink."
+
 #, fuzzy
-msgid "Both autovideosink and xvimagesink elements are not working."
+msgid "The autovideosink element is missing."
+msgstr "Manca tant l'element autovideosink com el xvimagesink."
+
+#, fuzzy, c-format
+msgid "Both autovideosink and %s elements are not working."
+msgstr "Manca tant l'element autovideosink com el xvimagesink."
+
+#, fuzzy
+msgid "The autovideosink element is not working."
 msgstr "Manca tant l'element autovideosink com el xvimagesink."
 
 msgid "Custom text sink element is not usable."
@@ -185,14 +201,26 @@ msgstr ""
 msgid "No volume control found"
 msgstr ""
 
+#, fuzzy, c-format
+msgid "Both autoaudiosink and %s elements are missing."
+msgstr "Manca tant l'element autoaudiosink com el alsasink."
+
 #, fuzzy
-msgid "Both autoaudiosink and alsasink elements are not working."
+msgid "The autoaudiosink element is missing."
+msgstr "Manca tant l'element autoaudiosink com el alsasink."
+
+#, fuzzy, c-format
+msgid "Both autoaudiosink and %s elements are not working."
+msgstr "Manca tant l'element autoaudiosink com el alsasink."
+
+#, fuzzy
+msgid "The autoaudiosink element is not working."
 msgstr "Manca tant l'element autoaudiosink com el alsasink."
 
 msgid "Can't play a text file without video."
 msgstr ""
 
-msgid "Can't play a text subtitles and subpictures."
+msgid "Can't display both text subtitles and subpictures."
 msgstr ""
 
 msgid "No Temp directory specified."
@@ -205,6 +233,10 @@ msgstr "No s'ha pogut tancar el fitxer vfs «%s»."
 #, fuzzy, c-format
 msgid "Could not open file \"%s\" for reading."
 msgstr "No s'ha pogut obrir el fitxer vfs «%s» per a escriptura: %s."
+
+#, fuzzy
+msgid "Internal data flow error."
+msgstr "S'ha produït un error intern de flux de dades."
 
 #, c-format
 msgid "No decoder available for type '%s'."
