--- a/gst-plugins-base/po/cs.po
+++ b/gst-plugins-base/po/cs.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-base-0.10.22.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-08-05 00:36+0100\n"
+"POT-Creation-Date: 2009-08-13 10:58+0100\n"
 "PO-Revision-Date: 2009-04-27 22:31+0200\n"
 "Last-Translator: Petr Kovar <pknbe@volny.cz>\n"
 "Language-Team: Czech <translation-team-cs@lists.sourceforge.net>\n"
@@ -128,6 +128,10 @@ msgstr ""
 msgid "This appears to be a text file"
 msgstr "Zdá se, že se jedná o textový soubor"
 
+#, fuzzy
+msgid "Could not determine type of stream"
+msgstr "Nezdařilo se vytvoření prvku \"typefind\"."
+
 #, c-format
 msgid "Invalid subtitle URI \"%s\", subtitles disabled."
 msgstr "Neplatné URI titulků \"%s\", titulky vypnuty."
@@ -179,7 +183,20 @@ msgstr "Schází prvek \"%s\" - zkontrolujte prosím instalaci systému GStreame
 msgid "Both autoaudiosink and alsasink elements are missing."
 msgstr "Schází jak prvek autoaudiosink, tak alsasink."
 
-msgid "Both autovideosink and xvimagesink elements are not working."
+#, fuzzy, c-format
+msgid "Both autovideosink and %s elements are missing."
+msgstr "Schází jak prvek autovideosink, tak xvimagesink."
+
+#, fuzzy
+msgid "The autovideosink element is missing."
+msgstr "Schází jak prvek autovideosink, tak xvimagesink."
+
+#, fuzzy, c-format
+msgid "Both autovideosink and %s elements are not working."
+msgstr "Nefunguje ani prvek autovideosink, ani xvimagesink."
+
+#, fuzzy
+msgid "The autovideosink element is not working."
 msgstr "Nefunguje ani prvek autovideosink, ani xvimagesink."
 
 msgid "Custom text sink element is not usable."
@@ -188,13 +205,27 @@ msgstr "Vlastní prvek kanálu textu není použitelný."
 msgid "No volume control found"
 msgstr "Nenalezeno žádné ovládání hlasitosti"
 
-msgid "Both autoaudiosink and alsasink elements are not working."
+#, fuzzy, c-format
+msgid "Both autoaudiosink and %s elements are missing."
+msgstr "Schází jak prvek autoaudiosink, tak alsasink."
+
+#, fuzzy
+msgid "The autoaudiosink element is missing."
+msgstr "Schází jak prvek autoaudiosink, tak alsasink."
+
+#, fuzzy, c-format
+msgid "Both autoaudiosink and %s elements are not working."
+msgstr "Nefunguje ani prvek autoaudiosink, ani alsasink."
+
+#, fuzzy
+msgid "The autoaudiosink element is not working."
 msgstr "Nefunguje ani prvek autoaudiosink, ani alsasink."
 
 msgid "Can't play a text file without video."
 msgstr "Textový soubor nelze přehrát bez videa."
 
-msgid "Can't play a text subtitles and subpictures."
+#, fuzzy
+msgid "Can't display both text subtitles and subpictures."
 msgstr "Textové titulky ani podřazené obrázky nelze přehrát."
 
 #, fuzzy
@@ -208,6 +239,10 @@ msgstr "Nezdařilo se zavření souboru vfs \"%s\"."
 #, c-format
 msgid "Could not open file \"%s\" for reading."
 msgstr "Nezdařilo se otevření souboru \"%s\" ke čtení."
+
+#, fuzzy
+msgid "Internal data flow error."
+msgstr "Vnitřní chyba datového proudu."
 
 #, c-format
 msgid "No decoder available for type '%s'."
