--- a/gst-plugins-base/po/da.po
+++ b/gst-plugins-base/po/da.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-base 0.10.22.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-08-05 00:36+0100\n"
+"POT-Creation-Date: 2009-08-13 10:58+0100\n"
 "PO-Revision-Date: 2009-07-19 16:38+0100\n"
 "Last-Translator: Joe Hansen <joedalton2@yahoo.dk>\n"
 "Language-Team: Danish <dansk@dansk-gruppen.dk>\n"
@@ -124,6 +124,10 @@ msgstr ""
 msgid "This appears to be a text file"
 msgstr "Denne fremstår som en tekstfil"
 
+#, fuzzy
+msgid "Could not determine type of stream"
+msgstr "Kunne ikke danne et \"typefind\" element."
+
 #, c-format
 msgid "Invalid subtitle URI \"%s\", subtitles disabled."
 msgstr "Defekt undertekst URI \"%s\", undertekster deaktiveret."
@@ -175,7 +179,20 @@ msgstr "'%s' elementet mangler - check din GStreamer installation."
 msgid "Both autoaudiosink and alsasink elements are missing."
 msgstr "Både autoaudiosink og alsasink elementerne mangler."
 
-msgid "Both autovideosink and xvimagesink elements are not working."
+#, fuzzy, c-format
+msgid "Both autovideosink and %s elements are missing."
+msgstr "Både autovideosink og xvimagesink elementerne mangler."
+
+#, fuzzy
+msgid "The autovideosink element is missing."
+msgstr "Både autovideosink og xvimagesink elementerne mangler."
+
+#, fuzzy, c-format
+msgid "Both autovideosink and %s elements are not working."
+msgstr "Både autovideosink- og xvimagesinkelementerne virker ikke."
+
+#, fuzzy
+msgid "The autovideosink element is not working."
 msgstr "Både autovideosink- og xvimagesinkelementerne virker ikke."
 
 msgid "Custom text sink element is not usable."
@@ -184,13 +201,27 @@ msgstr "Brugertilpasset tekstsinkelement er ikke brugbart."
 msgid "No volume control found"
 msgstr "Ingen lydstyrkekontrol fundet"
 
-msgid "Both autoaudiosink and alsasink elements are not working."
+#, fuzzy, c-format
+msgid "Both autoaudiosink and %s elements are missing."
+msgstr "Både autoaudiosink og alsasink elementerne mangler."
+
+#, fuzzy
+msgid "The autoaudiosink element is missing."
+msgstr "Både autoaudiosink og alsasink elementerne mangler."
+
+#, fuzzy, c-format
+msgid "Both autoaudiosink and %s elements are not working."
+msgstr "Både autoaudiosink- og alsasinkelementerne virker ikke."
+
+#, fuzzy
+msgid "The autoaudiosink element is not working."
 msgstr "Både autoaudiosink- og alsasinkelementerne virker ikke."
 
 msgid "Can't play a text file without video."
 msgstr "Kan ikke afspille en tekstfil uden video."
 
-msgid "Can't play a text subtitles and subpictures."
+#, fuzzy
+msgid "Can't display both text subtitles and subpictures."
 msgstr "Kan ikke afspille en undertekst og underbilleder."
 
 #, fuzzy
@@ -204,6 +235,10 @@ msgstr "Kunne ikke lukke vfs-filen \"%s\"."
 #, c-format
 msgid "Could not open file \"%s\" for reading."
 msgstr "Kunne ikke åbne fil \"%s\" til læsning."
+
+#, fuzzy
+msgid "Internal data flow error."
+msgstr "Intern datastrømsfejl."
 
 #, c-format
 msgid "No decoder available for type '%s'."
