--- a/gst-plugins-base/po/es.po
+++ b/gst-plugins-base/po/es.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-base 0.10.22.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-08-05 00:36+0100\n"
+"POT-Creation-Date: 2009-08-13 10:58+0100\n"
 "PO-Revision-Date: 2009-06-11 14:00+0200\n"
 "Last-Translator: Jorge González González <aloriel@gmail.com>\n"
 "Language-Team: Spanish <es@li.org>\n"
@@ -126,6 +126,10 @@ msgstr ""
 msgid "This appears to be a text file"
 msgstr "Esto parece ser un archivo de texto"
 
+#, fuzzy
+msgid "Could not determine type of stream"
+msgstr "No se pudo crear el elemento «typefind»."
+
 #, c-format
 msgid "Invalid subtitle URI \"%s\", subtitles disabled."
 msgstr "URI de subtítulos «%s» no válida, se desactivaron los subtítulos."
@@ -177,7 +181,20 @@ msgstr "Falta el elemento «%s»; compruebe su instalación de GStreamer."
 msgid "Both autoaudiosink and alsasink elements are missing."
 msgstr "Tanto el elemento autoaudiosink como alsasink faltan."
 
-msgid "Both autovideosink and xvimagesink elements are not working."
+#, fuzzy, c-format
+msgid "Both autovideosink and %s elements are missing."
+msgstr "Tanto el elemento autovideosink como xvimagesink faltan."
+
+#, fuzzy
+msgid "The autovideosink element is missing."
+msgstr "Tanto el elemento autovideosink como xvimagesink faltan."
+
+#, fuzzy, c-format
+msgid "Both autovideosink and %s elements are not working."
+msgstr "Tanto el elemento autovideosink como xvimagesink no están funcionando."
+
+#, fuzzy
+msgid "The autovideosink element is not working."
 msgstr "Tanto el elemento autovideosink como xvimagesink no están funcionando."
 
 msgid "Custom text sink element is not usable."
@@ -186,13 +203,27 @@ msgstr "No se puede usar el elemento sumidero (sink) de texto personalizado."
 msgid "No volume control found"
 msgstr "No se encontró ningún control de volumen"
 
-msgid "Both autoaudiosink and alsasink elements are not working."
+#, fuzzy, c-format
+msgid "Both autoaudiosink and %s elements are missing."
+msgstr "Tanto el elemento autoaudiosink como alsasink faltan."
+
+#, fuzzy
+msgid "The autoaudiosink element is missing."
+msgstr "Tanto el elemento autoaudiosink como alsasink faltan."
+
+#, fuzzy, c-format
+msgid "Both autoaudiosink and %s elements are not working."
+msgstr "Tanto el elemento autoaudiosink como alsasink no están funcionando."
+
+#, fuzzy
+msgid "The autoaudiosink element is not working."
 msgstr "Tanto el elemento autoaudiosink como alsasink no están funcionando."
 
 msgid "Can't play a text file without video."
 msgstr "No se puede reproducir un archivo de texto sin vídeo."
 
-msgid "Can't play a text subtitles and subpictures."
+#, fuzzy
+msgid "Can't display both text subtitles and subpictures."
 msgstr ""
 "No se puede reproducir un archivo de texto de subtítulos y subimágenes."
 
@@ -207,6 +238,10 @@ msgstr "No se pudo cerrar el archivo VFS «%s»."
 #, c-format
 msgid "Could not open file \"%s\" for reading."
 msgstr "No se pudo abrir el archivo «%s» para leer."
+
+#, fuzzy
+msgid "Internal data flow error."
+msgstr "Error interno de flujo de datos."
 
 #, c-format
 msgid "No decoder available for type '%s'."
