--- a/gst-plugins-base/po/fr.po
+++ b/gst-plugins-base/po/fr.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-base 0.10.22.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-08-05 00:36+0100\n"
+"POT-Creation-Date: 2009-08-13 10:58+0100\n"
 "PO-Revision-Date: 2009-05-21 11:10+0200\n"
 "Last-Translator: Claude Paroz <claude@2xlibre.net>\n"
 "Language-Team: French <traduc@traduc.org>\n"
@@ -131,6 +131,10 @@ msgstr ""
 msgid "This appears to be a text file"
 msgstr "Ce fichier semble être un fichier texte"
 
+#, fuzzy
+msgid "Could not determine type of stream"
+msgstr "Impossible de créer un élément « typefind »."
+
 #, c-format
 msgid "Invalid subtitle URI \"%s\", subtitles disabled."
 msgstr "URI de sous-titres « %s » non valide, les sous-titres sont désactivés."
@@ -182,7 +186,20 @@ msgstr "Élément « %s » manquant, contrôlez votre installation de GStreame
 msgid "Both autoaudiosink and alsasink elements are missing."
 msgstr "Les éléments autoaudiosink et alsasink sont tous deux manquants."
 
-msgid "Both autovideosink and xvimagesink elements are not working."
+#, fuzzy, c-format
+msgid "Both autovideosink and %s elements are missing."
+msgstr "Les éléments autovideosink et xvimagesink sont tous deux manquants."
+
+#, fuzzy
+msgid "The autovideosink element is missing."
+msgstr "Les éléments autovideosink et xvimagesink sont tous deux manquants."
+
+#, fuzzy, c-format
+msgid "Both autovideosink and %s elements are not working."
+msgstr "Les éléments autovideosink et xvimagesink ne fonctionnent pas."
+
+#, fuzzy
+msgid "The autovideosink element is not working."
 msgstr "Les éléments autovideosink et xvimagesink ne fonctionnent pas."
 
 msgid "Custom text sink element is not usable."
@@ -191,13 +208,27 @@ msgstr "L'élément sink text personnalisé n'est pas utilisable."
 msgid "No volume control found"
 msgstr "Aucun contrôle de volume trouvé"
 
-msgid "Both autoaudiosink and alsasink elements are not working."
+#, fuzzy, c-format
+msgid "Both autoaudiosink and %s elements are missing."
+msgstr "Les éléments autoaudiosink et alsasink sont tous deux manquants."
+
+#, fuzzy
+msgid "The autoaudiosink element is missing."
+msgstr "Les éléments autoaudiosink et alsasink sont tous deux manquants."
+
+#, fuzzy, c-format
+msgid "Both autoaudiosink and %s elements are not working."
+msgstr "Les éléments autoaudiosink et alsasink ne fonctionnent pas."
+
+#, fuzzy
+msgid "The autoaudiosink element is not working."
 msgstr "Les éléments autoaudiosink et alsasink ne fonctionnent pas."
 
 msgid "Can't play a text file without video."
 msgstr "Impossible de lire un fichier texte sans vidéo."
 
-msgid "Can't play a text subtitles and subpictures."
+#, fuzzy
+msgid "Can't display both text subtitles and subpictures."
 msgstr "Impossible de lire des sous-titres et sous-images texte."
 
 #, fuzzy
@@ -211,6 +242,10 @@ msgstr "Impossible de fermer le fichier vfs « %s »."
 #, c-format
 msgid "Could not open file \"%s\" for reading."
 msgstr "Impossible d'ouvrir le fichier « %s » en lecture."
+
+#, fuzzy
+msgid "Internal data flow error."
+msgstr "Erreur interne de flux de données."
 
 #, c-format
 msgid "No decoder available for type '%s'."
