--- a/gst-plugins-base/po/id.po
+++ b/gst-plugins-base/po/id.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-base 0.10.22.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-08-05 00:36+0100\n"
+"POT-Creation-Date: 2009-08-13 10:58+0100\n"
 "PO-Revision-Date: 2009-04-18 20:34+0700\n"
 "Last-Translator: Andhika Padmawan <andhika.padmawan@gmail.com>\n"
 "Language-Team: Indonesian <translation-team-id@lists.sourceforge.net>\n"
@@ -121,6 +121,10 @@ msgstr "Plugin %s dibutuhkan untuk memutar arus ini, tapi tidak diinstal."
 msgid "This appears to be a text file"
 msgstr "Ini kelihatannya merupakan berkas teks"
 
+#, fuzzy
+msgid "Could not determine type of stream"
+msgstr "Tak dapat membuat elemen \"typefind\"."
+
 #, c-format
 msgid "Invalid subtitle URI \"%s\", subtitles disabled."
 msgstr "URI subjudul \"%s\" tidak sah, subjudul dinonaktifkan."
@@ -171,7 +175,20 @@ msgstr "Elemen '%s' hilang - cek instalasi GStreamer anda."
 msgid "Both autoaudiosink and alsasink elements are missing."
 msgstr "Baik elemen autoaudiosink maupun alsasink hilang."
 
-msgid "Both autovideosink and xvimagesink elements are not working."
+#, fuzzy, c-format
+msgid "Both autovideosink and %s elements are missing."
+msgstr "Baik elemen autovideosink maupun xvimagesink hilang."
+
+#, fuzzy
+msgid "The autovideosink element is missing."
+msgstr "Baik elemen autovideosink maupun xvimagesink hilang."
+
+#, fuzzy, c-format
+msgid "Both autovideosink and %s elements are not working."
+msgstr "Baik elemen autovideosink maupun xvimagesink tidak bekerja."
+
+#, fuzzy
+msgid "The autovideosink element is not working."
 msgstr "Baik elemen autovideosink maupun xvimagesink tidak bekerja."
 
 msgid "Custom text sink element is not usable."
@@ -180,13 +197,27 @@ msgstr "Elemen teks tenggelam suai tak dapat digunakan."
 msgid "No volume control found"
 msgstr "Tak ada kontrol volume yang ditemukan"
 
-msgid "Both autoaudiosink and alsasink elements are not working."
+#, fuzzy, c-format
+msgid "Both autoaudiosink and %s elements are missing."
+msgstr "Baik elemen autoaudiosink maupun alsasink hilang."
+
+#, fuzzy
+msgid "The autoaudiosink element is missing."
+msgstr "Baik elemen autoaudiosink maupun alsasink hilang."
+
+#, fuzzy, c-format
+msgid "Both autoaudiosink and %s elements are not working."
+msgstr "Baik elemen autoaudiosink maupun alsasink tidak bekerja."
+
+#, fuzzy
+msgid "The autoaudiosink element is not working."
 msgstr "Baik elemen autoaudiosink maupun alsasink tidak bekerja."
 
 msgid "Can't play a text file without video."
 msgstr "Tak dapat memutar berkas teks tanpa video."
 
-msgid "Can't play a text subtitles and subpictures."
+#, fuzzy
+msgid "Can't display both text subtitles and subpictures."
 msgstr "Tak dapat memutar teks subjudul dan subgambar."
 
 #, fuzzy
@@ -200,6 +231,10 @@ msgstr "Tak dapat menutup berkas vfs \"%s\"."
 #, c-format
 msgid "Could not open file \"%s\" for reading."
 msgstr "Tak dapat membuka berkas \"%s\" untuk dibaca."
+
+#, fuzzy
+msgid "Internal data flow error."
+msgstr "Galat arus data internal."
 
 #, c-format
 msgid "No decoder available for type '%s'."
