--- a/gst-plugins-base/po/it.po
+++ b/gst-plugins-base/po/it.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-base 0.10.22.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-08-05 00:36+0100\n"
+"POT-Creation-Date: 2009-08-13 10:58+0100\n"
 "PO-Revision-Date: 2009-04-16 22:50+0200\n"
 "Last-Translator: Luca Ferretti <elle.uca@infinito.it>\n"
 "Language-Team: Italian <tp@lists.linux.it>\n"
@@ -127,6 +127,10 @@ msgstr ""
 msgid "This appears to be a text file"
 msgstr "Questo sembra essere un file di testo"
 
+#, fuzzy
+msgid "Could not determine type of stream"
+msgstr "Impossibile creare l'elemento «typefind»."
+
 #, c-format
 msgid "Invalid subtitle URI \"%s\", subtitles disabled."
 msgstr "URI dei sottotitoli «%s» non valido, sottotitoli disabilitati."
@@ -181,7 +185,23 @@ msgstr ""
 msgid "Both autoaudiosink and alsasink elements are missing."
 msgstr "Risultano mancanti entrambi gli elementi «autoaudiosink» e «alsasink»."
 
-msgid "Both autovideosink and xvimagesink elements are not working."
+#, fuzzy, c-format
+msgid "Both autovideosink and %s elements are missing."
+msgstr ""
+"Risultano mancanti entrambi gli elementi «autovideosink» e «xvimagesink»."
+
+#, fuzzy
+msgid "The autovideosink element is missing."
+msgstr ""
+"Risultano mancanti entrambi gli elementi «autovideosink» e «xvimagesink»."
+
+#, fuzzy, c-format
+msgid "Both autovideosink and %s elements are not working."
+msgstr ""
+"Entrambi gli elementi «autovideosink» e «xvimagesink» non sono operativi."
+
+#, fuzzy
+msgid "The autovideosink element is not working."
 msgstr ""
 "Entrambi gli elementi «autovideosink» e «xvimagesink» non sono operativi."
 
@@ -191,7 +211,20 @@ msgstr "L'elemento sink di testo personalizzato non è utilizzabile."
 msgid "No volume control found"
 msgstr "Non è stato trovato alcun controllo del volume"
 
-msgid "Both autoaudiosink and alsasink elements are not working."
+#, fuzzy, c-format
+msgid "Both autoaudiosink and %s elements are missing."
+msgstr "Risultano mancanti entrambi gli elementi «autoaudiosink» e «alsasink»."
+
+#, fuzzy
+msgid "The autoaudiosink element is missing."
+msgstr "Risultano mancanti entrambi gli elementi «autoaudiosink» e «alsasink»."
+
+#, fuzzy, c-format
+msgid "Both autoaudiosink and %s elements are not working."
+msgstr "Entrambi gli elementi «autoaudiosink» e «alsasink» non sono operativi."
+
+#, fuzzy
+msgid "The autoaudiosink element is not working."
 msgstr "Entrambi gli elementi «autoaudiosink» e «alsasink» non sono operativi."
 
 msgid "Can't play a text file without video."
@@ -201,7 +234,8 @@ msgstr "Impossibile riprodurre un file di testo senza video."
 # questo messaggio è stanissimo
 # Subpictures sono cose tipiche dei dvd (vedi google)
 # e sembra che non ci sia una traduzione in italiano
-msgid "Can't play a text subtitles and subpictures."
+#, fuzzy
+msgid "Can't display both text subtitles and subpictures."
 msgstr "Impossibile riprodurre sottotitoli di testo e subpicture."
 
 #, fuzzy
@@ -215,6 +249,10 @@ msgstr "Impossibile chiudere il file vfs «%s»."
 #, c-format
 msgid "Could not open file \"%s\" for reading."
 msgstr "Impossibile aprire il file «%s» in lettura."
+
+#, fuzzy
+msgid "Internal data flow error."
+msgstr "Errore interno nel flusso di dati."
 
 #, c-format
 msgid "No decoder available for type '%s'."
