--- a/gst-plugins-base/po/ja.po
+++ b/gst-plugins-base/po/ja.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-base 0.10.20.3\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-08-05 00:36+0100\n"
+"POT-Creation-Date: 2009-08-13 10:58+0100\n"
 "PO-Revision-Date: 2009-01-11 20:45+0900\n"
 "Last-Translator: Makoto Kato <makoto.kt@gmail.com>\n"
 "Language-Team: Japanese <translation-team-ja@lists.sourceforge.net>\n"
@@ -125,6 +125,10 @@ msgstr ""
 msgid "This appears to be a text file"
 msgstr ""
 
+#, fuzzy
+msgid "Could not determine type of stream"
+msgstr "\"typefind\" エレメントを作成できませんでした"
+
 #, c-format
 msgid "Invalid subtitle URI \"%s\", subtitles disabled."
 msgstr "不正な字幕 URI \"%s\"。字幕を無効にします。"
@@ -177,8 +181,20 @@ msgstr ""
 msgid "Both autoaudiosink and alsasink elements are missing."
 msgstr "autovideosink と alsasink エレメントの両方が見つかりません"
 
+#, fuzzy, c-format
+msgid "Both autovideosink and %s elements are missing."
+msgstr "autovideosink と xvimagesink エレメントの両方が見つかりません"
+
 #, fuzzy
-msgid "Both autovideosink and xvimagesink elements are not working."
+msgid "The autovideosink element is missing."
+msgstr "autovideosink と xvimagesink エレメントの両方が見つかりません"
+
+#, fuzzy, c-format
+msgid "Both autovideosink and %s elements are not working."
+msgstr "autovideosink と xvimagesink エレメントの両方が見つかりません"
+
+#, fuzzy
+msgid "The autovideosink element is not working."
 msgstr "autovideosink と xvimagesink エレメントの両方が見つかりません"
 
 msgid "Custom text sink element is not usable."
@@ -187,14 +203,26 @@ msgstr ""
 msgid "No volume control found"
 msgstr "ボリュームコントロールが見つかりません"
 
+#, fuzzy, c-format
+msgid "Both autoaudiosink and %s elements are missing."
+msgstr "autovideosink と alsasink エレメントの両方が見つかりません"
+
 #, fuzzy
-msgid "Both autoaudiosink and alsasink elements are not working."
+msgid "The autoaudiosink element is missing."
+msgstr "autovideosink と alsasink エレメントの両方が見つかりません"
+
+#, fuzzy, c-format
+msgid "Both autoaudiosink and %s elements are not working."
+msgstr "autovideosink と alsasink エレメントの両方が見つかりません"
+
+#, fuzzy
+msgid "The autoaudiosink element is not working."
 msgstr "autovideosink と alsasink エレメントの両方が見つかりません"
 
 msgid "Can't play a text file without video."
 msgstr ""
 
-msgid "Can't play a text subtitles and subpictures."
+msgid "Can't display both text subtitles and subpictures."
 msgstr ""
 
 #, fuzzy
@@ -208,6 +236,10 @@ msgstr "vfs ファイル \"%s\" をクローズできませんでした"
 #, c-format
 msgid "Could not open file \"%s\" for reading."
 msgstr "読み込み用にファイル \"%s\" を開くことができませんでした"
+
+#, fuzzy
+msgid "Internal data flow error."
+msgstr "内部データストリームエラー"
 
 #, c-format
 msgid "No decoder available for type '%s'."
