--- a/gst-plugins-base/po/lt.po
+++ b/gst-plugins-base/po/lt.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-base-0.10.15.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-08-05 00:36+0100\n"
+"POT-Creation-Date: 2009-08-13 10:58+0100\n"
 "PO-Revision-Date: 2008-03-07 23:43+0200\n"
 "Last-Translator: Gintautas Miliauskas <gintas@akl.lt>\n"
 "Language-Team: Lithuanian <komp_lt@konferencijos.lt>\n"
@@ -125,6 +125,10 @@ msgstr "Šiam srautui groti reikalingas %s įskiepis, bet jis nėra įdiegtas."
 msgid "This appears to be a text file"
 msgstr "Atrodo, kad šis failas tekstinis"
 
+#, fuzzy
+msgid "Could not determine type of stream"
+msgstr "Nepavyko sukurti „decodebin“ elemento."
+
 #, c-format
 msgid "Invalid subtitle URI \"%s\", subtitles disabled."
 msgstr "Netaisyklingas titrų URI „%s“, titrai išjungti."
@@ -175,8 +179,20 @@ msgstr "Trūksta elemento „%s“ - patikrinkite GStreamer įdiegimą."
 msgid "Both autoaudiosink and alsasink elements are missing."
 msgstr "Trūksta ir autoaudiosink, ir alsasink elementų."
 
+#, fuzzy, c-format
+msgid "Both autovideosink and %s elements are missing."
+msgstr "Trūksta ir autovideosink, ir xvimagesink elementų."
+
 #, fuzzy
-msgid "Both autovideosink and xvimagesink elements are not working."
+msgid "The autovideosink element is missing."
+msgstr "Trūksta ir autovideosink, ir xvimagesink elementų."
+
+#, fuzzy, c-format
+msgid "Both autovideosink and %s elements are not working."
+msgstr "Trūksta ir autovideosink, ir xvimagesink elementų."
+
+#, fuzzy
+msgid "The autovideosink element is not working."
 msgstr "Trūksta ir autovideosink, ir xvimagesink elementų."
 
 msgid "Custom text sink element is not usable."
@@ -185,14 +201,26 @@ msgstr ""
 msgid "No volume control found"
 msgstr ""
 
+#, fuzzy, c-format
+msgid "Both autoaudiosink and %s elements are missing."
+msgstr "Trūksta ir autoaudiosink, ir alsasink elementų."
+
 #, fuzzy
-msgid "Both autoaudiosink and alsasink elements are not working."
+msgid "The autoaudiosink element is missing."
+msgstr "Trūksta ir autoaudiosink, ir alsasink elementų."
+
+#, fuzzy, c-format
+msgid "Both autoaudiosink and %s elements are not working."
+msgstr "Trūksta ir autoaudiosink, ir alsasink elementų."
+
+#, fuzzy
+msgid "The autoaudiosink element is not working."
 msgstr "Trūksta ir autoaudiosink, ir alsasink elementų."
 
 msgid "Can't play a text file without video."
 msgstr ""
 
-msgid "Can't play a text subtitles and subpictures."
+msgid "Can't display both text subtitles and subpictures."
 msgstr ""
 
 #, fuzzy
@@ -206,6 +234,10 @@ msgstr "Nepavyko užverti vfs failo „%s“."
 #, c-format
 msgid "Could not open file \"%s\" for reading."
 msgstr "Nepavyko atverti failo „%s“ rašymui."
+
+#, fuzzy
+msgid "Internal data flow error."
+msgstr "Vidinė duomenų srauto klaida."
 
 #, c-format
 msgid "No decoder available for type '%s'."
