--- a/gst-plugins-base/po/lv.po
+++ b/gst-plugins-base/po/lv.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-base 0.10.22.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-08-05 00:36+0100\n"
+"POT-Creation-Date: 2009-08-13 10:58+0100\n"
 "PO-Revision-Date: 2009-07-30 12:26+0100\n"
 "Last-Translator: Rihards Priedītis <rprieditis@gmail.com>\n"
 "Language-Team: Latvian <translation-team-lv@lists.sourceforge.net>\n"
@@ -126,6 +126,10 @@ msgstr ""
 msgid "This appears to be a text file"
 msgstr "Tiek atpazīts kā teksta fails"
 
+#, fuzzy
+msgid "Could not determine type of stream"
+msgstr "Nav iespējams izveidot \"typefind\" elementu."
+
 #, c-format
 msgid "Invalid subtitle URI \"%s\", subtitles disabled."
 msgstr "Nederīgs subtitru URI \"%s\", subtitri izslēgti."
@@ -176,7 +180,20 @@ msgstr "Trūkst elements \"%s\" - pārbaudiet savu GStreamer instalāciju."
 msgid "Both autoaudiosink and alsasink elements are missing."
 msgstr "Trūkst gan autoaudiosink, gan alsasink elementi."
 
-msgid "Both autovideosink and xvimagesink elements are not working."
+#, fuzzy, c-format
+msgid "Both autovideosink and %s elements are missing."
+msgstr "Trūkst gan autovideosink, gan xvimagesink elementi."
+
+#, fuzzy
+msgid "The autovideosink element is missing."
+msgstr "Trūkst gan autovideosink, gan xvimagesink elementi."
+
+#, fuzzy, c-format
+msgid "Both autovideosink and %s elements are not working."
+msgstr "Gan autovideosink, gan xvimagesink elementi nedarbojas."
+
+#, fuzzy
+msgid "The autovideosink element is not working."
 msgstr "Gan autovideosink, gan xvimagesink elementi nedarbojas."
 
 msgid "Custom text sink element is not usable."
@@ -185,13 +202,27 @@ msgstr "Pielāgots teksta iegremdēšanas elements nav lietojams."
 msgid "No volume control found"
 msgstr "Netika atrasta neviena skaļuma kontrole"
 
-msgid "Both autoaudiosink and alsasink elements are not working."
+#, fuzzy, c-format
+msgid "Both autoaudiosink and %s elements are missing."
+msgstr "Trūkst gan autoaudiosink, gan alsasink elementi."
+
+#, fuzzy
+msgid "The autoaudiosink element is missing."
+msgstr "Trūkst gan autoaudiosink, gan alsasink elementi."
+
+#, fuzzy, c-format
+msgid "Both autoaudiosink and %s elements are not working."
+msgstr "Gan autoaudiosink, gan alsasink elementi nedarbojas."
+
+#, fuzzy
+msgid "The autoaudiosink element is not working."
 msgstr "Gan autoaudiosink, gan alsasink elementi nedarbojas."
 
 msgid "Can't play a text file without video."
 msgstr "Nevar atskaņot teksta failu bez video."
 
-msgid "Can't play a text subtitles and subpictures."
+#, fuzzy
+msgid "Can't display both text subtitles and subpictures."
 msgstr "Nevar atskaņot teksta subtitrus un subattēlus."
 
 #, fuzzy
@@ -205,6 +236,10 @@ msgstr "Nevarēja aizvērt vfs failu \"%s\"."
 #, c-format
 msgid "Could not open file \"%s\" for reading."
 msgstr "Nav iespējams atvērt failu \"%s\" lasīšanai."
+
+#, fuzzy
+msgid "Internal data flow error."
+msgstr "Iekšējās datu plūsmas kļūda."
 
 #, c-format
 msgid "No decoder available for type '%s'."
