--- a/gst-plugins-base/po/nl.po
+++ b/gst-plugins-base/po/nl.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-base 0.10.22.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-08-05 00:36+0100\n"
+"POT-Creation-Date: 2009-08-13 10:58+0100\n"
 "PO-Revision-Date: 2009-05-04 12:58+0200\n"
 "Last-Translator: Freek de Kruijf <f.de.kruijf@hetnet.nl>\n"
 "Language-Team: Dutch <vertaling@vrijschrift.org>\n"
@@ -125,6 +125,10 @@ msgstr ""
 msgid "This appears to be a text file"
 msgstr "Dit lijkt een tekstbestand te zijn"
 
+#, fuzzy
+msgid "Could not determine type of stream"
+msgstr "Kan \"typefind\"-element niet aanmaken."
+
 #, c-format
 msgid "Invalid subtitle URI \"%s\", subtitles disabled."
 msgstr "Ongeldige ondertitel-URI \"%s\"; ondertitels zijn uitgezet."
@@ -176,7 +180,20 @@ msgstr "Ontbrekend element '%s' - controleer de instalatie van uw GStreamer."
 msgid "Both autoaudiosink and alsasink elements are missing."
 msgstr "De elementen 'autoaudiosink' en 'alsasink' ontbreken beide."
 
-msgid "Both autovideosink and xvimagesink elements are not working."
+#, fuzzy, c-format
+msgid "Both autovideosink and %s elements are missing."
+msgstr "De elementen 'autovideosink' en 'xvimagesink' ontbreken beide."
+
+#, fuzzy
+msgid "The autovideosink element is missing."
+msgstr "De elementen 'autovideosink' en 'xvimagesink' ontbreken beide."
+
+#, fuzzy, c-format
+msgid "Both autovideosink and %s elements are not working."
+msgstr "De elementen 'autovideosink' en 'xvimagesink' werken niet."
+
+#, fuzzy
+msgid "The autovideosink element is not working."
 msgstr "De elementen 'autovideosink' en 'xvimagesink' werken niet."
 
 msgid "Custom text sink element is not usable."
@@ -185,13 +202,27 @@ msgstr "De aangepaste element 'tekst-sink' is niet bruikbaar."
 msgid "No volume control found"
 msgstr "Geen volume controle gevonden"
 
-msgid "Both autoaudiosink and alsasink elements are not working."
+#, fuzzy, c-format
+msgid "Both autoaudiosink and %s elements are missing."
+msgstr "De elementen 'autoaudiosink' en 'alsasink' ontbreken beide."
+
+#, fuzzy
+msgid "The autoaudiosink element is missing."
+msgstr "De elementen 'autoaudiosink' en 'alsasink' ontbreken beide."
+
+#, fuzzy, c-format
+msgid "Both autoaudiosink and %s elements are not working."
+msgstr "Beide elementen 'autoaudiosink' en 'alsasink' werken niet."
+
+#, fuzzy
+msgid "The autoaudiosink element is not working."
 msgstr "Beide elementen 'autoaudiosink' en 'alsasink' werken niet."
 
 msgid "Can't play a text file without video."
 msgstr "Kan geen tekstbestand afspelen zonder video."
 
-msgid "Can't play a text subtitles and subpictures."
+#, fuzzy
+msgid "Can't display both text subtitles and subpictures."
 msgstr "Kan geen tekst-ondertitels en onder-afbeeldingen en afspelen."
 
 #, fuzzy
@@ -205,6 +236,10 @@ msgstr "Kan het VFS-bestand \"%s\" niet sluiten."
 #, c-format
 msgid "Could not open file \"%s\" for reading."
 msgstr "Kan bestand \"%s\" niet open voor lezen."
+
+#, fuzzy
+msgid "Internal data flow error."
+msgstr "Interne fout in gegevensstroom."
 
 #, c-format
 msgid "No decoder available for type '%s'."
