--- a/gst-plugins-base/po/pl.po
+++ b/gst-plugins-base/po/pl.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-base 0.10.22.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-08-05 00:36+0100\n"
+"POT-Creation-Date: 2009-08-13 10:58+0100\n"
 "PO-Revision-Date: 2009-04-16 21:39+0200\n"
 "Last-Translator: Jakub Bogusz <qboosh@pld-linux.org>\n"
 "Language-Team: Polish <translation-team-pl@lists.sourceforge.net>\n"
@@ -131,6 +131,10 @@ msgstr ""
 msgid "This appears to be a text file"
 msgstr "To wygląda na plik tekstowy"
 
+#, fuzzy
+msgid "Could not determine type of stream"
+msgstr "Nie udało się utworzyć elementu \"typefind\"."
+
 #, c-format
 msgid "Invalid subtitle URI \"%s\", subtitles disabled."
 msgstr "Niepoprawne URI podpisów \"%s\", podpisy wyłączone."
@@ -181,7 +185,20 @@ msgstr "Brak elementu '%s' - proszę sprawdzić instalację GStreamera."
 msgid "Both autoaudiosink and alsasink elements are missing."
 msgstr "Nie ma żadnego z elementów autoaudiosink i alsasink."
 
-msgid "Both autovideosink and xvimagesink elements are not working."
+#, fuzzy, c-format
+msgid "Both autovideosink and %s elements are missing."
+msgstr "Nie ma żadnego z elementów autovideosink i xvimagesink."
+
+#, fuzzy
+msgid "The autovideosink element is missing."
+msgstr "Nie ma żadnego z elementów autovideosink i xvimagesink."
+
+#, fuzzy, c-format
+msgid "Both autovideosink and %s elements are not working."
+msgstr "Żaden z elementów autovideosink i xvimagesink nie działa."
+
+#, fuzzy
+msgid "The autovideosink element is not working."
 msgstr "Żaden z elementów autovideosink i xvimagesink nie działa."
 
 msgid "Custom text sink element is not usable."
@@ -190,13 +207,27 @@ msgstr "Własny element text sink nie jest użyteczny."
 msgid "No volume control found"
 msgstr "Nie znaleziono sterowania głośnością"
 
-msgid "Both autoaudiosink and alsasink elements are not working."
+#, fuzzy, c-format
+msgid "Both autoaudiosink and %s elements are missing."
+msgstr "Nie ma żadnego z elementów autoaudiosink i alsasink."
+
+#, fuzzy
+msgid "The autoaudiosink element is missing."
+msgstr "Nie ma żadnego z elementów autoaudiosink i alsasink."
+
+#, fuzzy, c-format
+msgid "Both autoaudiosink and %s elements are not working."
+msgstr "Żaden z elementów autoaudiosink i alsasink nie działa."
+
+#, fuzzy
+msgid "The autoaudiosink element is not working."
 msgstr "Żaden z elementów autoaudiosink i alsasink nie działa."
 
 msgid "Can't play a text file without video."
 msgstr "Nie można odtwarzać pliku tekstowego bez obrazu."
 
-msgid "Can't play a text subtitles and subpictures."
+#, fuzzy
+msgid "Can't display both text subtitles and subpictures."
 msgstr "Nie można odtwarzać podpisów tekstowych i podobrazów."
 
 #, fuzzy
@@ -210,6 +241,10 @@ msgstr "Nie udało się zamknąć pliku vfs \"%s\"."
 #, c-format
 msgid "Could not open file \"%s\" for reading."
 msgstr "Nie udało się otworzyć pliku \"%s\" do odczytu."
+
+#, fuzzy
+msgid "Internal data flow error."
+msgstr "Błąd wewnętrzny strumienia danych."
 
 #, c-format
 msgid "No decoder available for type '%s'."
