--- a/gst-plugins-base/po/pt_BR.po
+++ b/gst-plugins-base/po/pt_BR.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-base-0.10.22.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-08-05 00:36+0100\n"
+"POT-Creation-Date: 2009-08-13 10:58+0100\n"
 "PO-Revision-Date: 2009-04-16 21:03-0300\n"
 "Last-Translator: Fabrício Godoy <skarllot@gmail.com>\n"
 "Language-Team: Brazilian Portuguese <ldp-br@bazar.conectiva.com.br>\n"
@@ -126,6 +126,10 @@ msgstr ""
 msgid "This appears to be a text file"
 msgstr "Este parece ser um arquivo de texto"
 
+#, fuzzy
+msgid "Could not determine type of stream"
+msgstr "Não foi possível criar o elemento \"typefind\"."
+
 #, c-format
 msgid "Invalid subtitle URI \"%s\", subtitles disabled."
 msgstr "O URI \"%s\" para legenda é inválido, legendas desabilitadas."
@@ -178,7 +182,20 @@ msgstr ""
 msgid "Both autoaudiosink and alsasink elements are missing."
 msgstr "Os elementos autoaudiosink e alsasink estão faltando."
 
-msgid "Both autovideosink and xvimagesink elements are not working."
+#, fuzzy, c-format
+msgid "Both autovideosink and %s elements are missing."
+msgstr "Os elementos autovideosink e xvimagesink estão faltando."
+
+#, fuzzy
+msgid "The autovideosink element is missing."
+msgstr "Os elementos autovideosink e xvimagesink estão faltando."
+
+#, fuzzy, c-format
+msgid "Both autovideosink and %s elements are not working."
+msgstr "Os elementos autovideosink e xvimagesink não estão funcionando."
+
+#, fuzzy
+msgid "The autovideosink element is not working."
 msgstr "Os elementos autovideosink e xvimagesink não estão funcionando."
 
 msgid "Custom text sink element is not usable."
@@ -187,13 +204,27 @@ msgstr "O elemento consumidor personalizado de texto não é utilizável."
 msgid "No volume control found"
 msgstr "Nenhum controle de volume encontrado"
 
-msgid "Both autoaudiosink and alsasink elements are not working."
+#, fuzzy, c-format
+msgid "Both autoaudiosink and %s elements are missing."
+msgstr "Os elementos autoaudiosink e alsasink estão faltando."
+
+#, fuzzy
+msgid "The autoaudiosink element is missing."
+msgstr "Os elementos autoaudiosink e alsasink estão faltando."
+
+#, fuzzy, c-format
+msgid "Both autoaudiosink and %s elements are not working."
+msgstr "Os elementos autoaudiosink e alsasink não estão funcionando."
+
+#, fuzzy
+msgid "The autoaudiosink element is not working."
 msgstr "Os elementos autoaudiosink e alsasink não estão funcionando."
 
 msgid "Can't play a text file without video."
 msgstr "Não é possível reproduzir um arquivo de texto sem vídeo."
 
-msgid "Can't play a text subtitles and subpictures."
+#, fuzzy
+msgid "Can't display both text subtitles and subpictures."
 msgstr "Não é possível reproduzir legendas de texto e subimagens."
 
 #, fuzzy
@@ -207,6 +238,10 @@ msgstr "Não foi possível fechar o arquivo VFS \"%s\"."
 #, c-format
 msgid "Could not open file \"%s\" for reading."
 msgstr "Não foi possível abrir o arquivo \"%s\" para leitura."
+
+#, fuzzy
+msgid "Internal data flow error."
+msgstr "Erro interno no fluxo de dados."
 
 #, c-format
 msgid "No decoder available for type '%s'."
