--- a/gst-plugins-base/po/ru.po
+++ b/gst-plugins-base/po/ru.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-base 0.10.21.3\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-08-05 00:36+0100\n"
+"POT-Creation-Date: 2009-08-13 10:58+0100\n"
 "PO-Revision-Date: 2009-02-12 14:45+0200\n"
 "Last-Translator: Pavel Maryanov <acid_jack@ukr.net>\n"
 "Language-Team: Russian <gnu@mx.ru>\n"
@@ -124,6 +124,10 @@ msgstr ""
 msgid "This appears to be a text file"
 msgstr "Этот файл является текстовым"
 
+#, fuzzy
+msgid "Could not determine type of stream"
+msgstr "Не удалось создать элемент «typefind»."
+
 #, c-format
 msgid "Invalid subtitle URI \"%s\", subtitles disabled."
 msgstr "Неверный URI субтитров «%s», субтитры выключены."
@@ -174,8 +178,20 @@ msgstr "Отсутствует элемент «%s» — проверьте пр
 msgid "Both autoaudiosink and alsasink elements are missing."
 msgstr "Отсутствуют элементы autoaudiosink и alsasink."
 
+#, fuzzy, c-format
+msgid "Both autovideosink and %s elements are missing."
+msgstr "Отсутствуют элементы autovideosink и xvimagesink."
+
 #, fuzzy
-msgid "Both autovideosink and xvimagesink elements are not working."
+msgid "The autovideosink element is missing."
+msgstr "Отсутствуют элементы autovideosink и xvimagesink."
+
+#, fuzzy, c-format
+msgid "Both autovideosink and %s elements are not working."
+msgstr "Отсутствуют элементы autovideosink и xvimagesink."
+
+#, fuzzy
+msgid "The autovideosink element is not working."
 msgstr "Отсутствуют элементы autovideosink и xvimagesink."
 
 msgid "Custom text sink element is not usable."
@@ -184,15 +200,27 @@ msgstr ""
 msgid "No volume control found"
 msgstr "Не найден элемент управления громкостью"
 
+#, fuzzy, c-format
+msgid "Both autoaudiosink and %s elements are missing."
+msgstr "Отсутствуют элементы autoaudiosink и alsasink."
+
 #, fuzzy
-msgid "Both autoaudiosink and alsasink elements are not working."
+msgid "The autoaudiosink element is missing."
+msgstr "Отсутствуют элементы autoaudiosink и alsasink."
+
+#, fuzzy, c-format
+msgid "Both autoaudiosink and %s elements are not working."
+msgstr "Отсутствуют элементы autoaudiosink и alsasink."
+
+#, fuzzy
+msgid "The autoaudiosink element is not working."
 msgstr "Отсутствуют элементы autoaudiosink и alsasink."
 
 msgid "Can't play a text file without video."
 msgstr "Воспроизведение текстового файла без видео невозможно."
 
 #, fuzzy
-msgid "Can't play a text subtitles and subpictures."
+msgid "Can't display both text subtitles and subpictures."
 msgstr "Воспроизведение текстового файла без видео невозможно."
 
 #, fuzzy
@@ -206,6 +234,10 @@ msgstr "Не удалось закрыть vfs-файл «%s»."
 #, c-format
 msgid "Could not open file \"%s\" for reading."
 msgstr "Не удалось открыть файл «%s» для чтения."
+
+#, fuzzy
+msgid "Internal data flow error."
+msgstr "Внутренняя ошибка потока данных."
 
 #, c-format
 msgid "No decoder available for type '%s'."
