--- a/gst-plugins-base/po/sk.po
+++ b/gst-plugins-base/po/sk.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-base 0.10.20.3\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-08-05 00:36+0100\n"
+"POT-Creation-Date: 2009-08-13 10:58+0100\n"
 "PO-Revision-Date: 2008-09-25 09:59+0100\n"
 "Last-Translator: Peter Tuhársky <tuharsky@misbb.sk>\n"
 "Language-Team: Slovak <sk-i18n@lists.linux.sk>\n"
@@ -128,6 +128,10 @@ msgstr ""
 msgid "This appears to be a text file"
 msgstr "Tento súbor je asi textový"
 
+#, fuzzy
+msgid "Could not determine type of stream"
+msgstr "Nepodarilo sa vytvoriť prvok \"typefind\""
+
 #, c-format
 msgid "Invalid subtitle URI \"%s\", subtitles disabled."
 msgstr "Chybné URI titulkov \"%s\", titulky zakázané."
@@ -178,8 +182,20 @@ msgstr "Chýa prvok '%s' - skontrolujte svoju inštaláciu GStreamer."
 msgid "Both autoaudiosink and alsasink elements are missing."
 msgstr "Chýbajú prvky autoaudiosink aj alsasink."
 
+#, fuzzy, c-format
+msgid "Both autovideosink and %s elements are missing."
+msgstr "Chýbajú prvky autovideosink aj xvimagesink."
+
 #, fuzzy
-msgid "Both autovideosink and xvimagesink elements are not working."
+msgid "The autovideosink element is missing."
+msgstr "Chýbajú prvky autovideosink aj xvimagesink."
+
+#, fuzzy, c-format
+msgid "Both autovideosink and %s elements are not working."
+msgstr "Chýbajú prvky autovideosink aj xvimagesink."
+
+#, fuzzy
+msgid "The autovideosink element is not working."
 msgstr "Chýbajú prvky autovideosink aj xvimagesink."
 
 msgid "Custom text sink element is not usable."
@@ -188,14 +204,26 @@ msgstr ""
 msgid "No volume control found"
 msgstr "+Ziadny ovl8da4 hlasitosti sa nena3iel"
 
+#, fuzzy, c-format
+msgid "Both autoaudiosink and %s elements are missing."
+msgstr "Chýbajú prvky autoaudiosink aj alsasink."
+
 #, fuzzy
-msgid "Both autoaudiosink and alsasink elements are not working."
+msgid "The autoaudiosink element is missing."
+msgstr "Chýbajú prvky autoaudiosink aj alsasink."
+
+#, fuzzy, c-format
+msgid "Both autoaudiosink and %s elements are not working."
+msgstr "Chýbajú prvky autoaudiosink aj alsasink."
+
+#, fuzzy
+msgid "The autoaudiosink element is not working."
 msgstr "Chýbajú prvky autoaudiosink aj alsasink."
 
 msgid "Can't play a text file without video."
 msgstr ""
 
-msgid "Can't play a text subtitles and subpictures."
+msgid "Can't display both text subtitles and subpictures."
 msgstr ""
 
 #, fuzzy
@@ -209,6 +237,10 @@ msgstr "Nepodarilo sa zatvoriť súbor \"%s\"."
 #, c-format
 msgid "Could not open file \"%s\" for reading."
 msgstr "Nepodarilo sa otvoriť súbor \"%s\" na čítanie."
+
+#, fuzzy
+msgid "Internal data flow error."
+msgstr "Vnútorná chyba prúdu údajov."
 
 #, c-format
 msgid "No decoder available for type '%s'."
