--- a/gst-plugins-base/po/sv.po
+++ b/gst-plugins-base/po/sv.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-base 0.10.22.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-08-05 00:36+0100\n"
+"POT-Creation-Date: 2009-08-13 10:58+0100\n"
 "PO-Revision-Date: 2009-05-28 09:07+0100\n"
 "Last-Translator: Daniel Nylander <po@danielnylander.se>\n"
 "Language-Team: Swedish <tp-sv@listor.tp-sv.se>\n"
@@ -125,6 +125,10 @@ msgstr ""
 msgid "This appears to be a text file"
 msgstr "Den här ser ut att vara en textfil"
 
+#, fuzzy
+msgid "Could not determine type of stream"
+msgstr "Kunde inte skapa \"typefind\"-element."
+
 #, c-format
 msgid "Invalid subtitle URI \"%s\", subtitles disabled."
 msgstr "Ogiltig uri för undertext \"%s\", undertexter inaktiverade."
@@ -176,7 +180,20 @@ msgstr "Saknar elementet \"%s\" - kontrollera din GStreamer-installation."
 msgid "Both autoaudiosink and alsasink elements are missing."
 msgstr "Både autoaudiosink- och alsasink-elementen saknas."
 
-msgid "Both autovideosink and xvimagesink elements are not working."
+#, fuzzy, c-format
+msgid "Both autovideosink and %s elements are missing."
+msgstr "Både autovideosink- och xvimagesink-elementen saknas."
+
+#, fuzzy
+msgid "The autovideosink element is missing."
+msgstr "Både autovideosink- och xvimagesink-elementen saknas."
+
+#, fuzzy, c-format
+msgid "Both autovideosink and %s elements are not working."
+msgstr "Varken autovideosink- och xvimagesink-elementen fungerar."
+
+#, fuzzy
+msgid "The autovideosink element is not working."
 msgstr "Varken autovideosink- och xvimagesink-elementen fungerar."
 
 msgid "Custom text sink element is not usable."
@@ -185,13 +202,27 @@ msgstr "Anpassat text sink-element är inte användbart."
 msgid "No volume control found"
 msgstr "Ingen volymkontroll hittades"
 
-msgid "Both autoaudiosink and alsasink elements are not working."
+#, fuzzy, c-format
+msgid "Both autoaudiosink and %s elements are missing."
+msgstr "Både autoaudiosink- och alsasink-elementen saknas."
+
+#, fuzzy
+msgid "The autoaudiosink element is missing."
+msgstr "Både autoaudiosink- och alsasink-elementen saknas."
+
+#, fuzzy, c-format
+msgid "Both autoaudiosink and %s elements are not working."
+msgstr "Varken autoaudiosink- och alsasink-elementen fungerar."
+
+#, fuzzy
+msgid "The autoaudiosink element is not working."
 msgstr "Varken autoaudiosink- och alsasink-elementen fungerar."
 
 msgid "Can't play a text file without video."
 msgstr "Kan inte spela upp en textfil utan video."
 
-msgid "Can't play a text subtitles and subpictures."
+#, fuzzy
+msgid "Can't display both text subtitles and subpictures."
 msgstr "Kan inte spela upp en undertext och underbilder."
 
 #, fuzzy
@@ -205,6 +236,10 @@ msgstr "Kunde inte skriva till filen \"%s\"."
 #, c-format
 msgid "Could not open file \"%s\" for reading."
 msgstr "Kunde inte öppna filen \"%s\" för läsning."
+
+#, fuzzy
+msgid "Internal data flow error."
+msgstr "Internt dataströmfel."
 
 #, c-format
 msgid "No decoder available for type '%s'."
