--- a/gst-plugins-base/po/tr.po
+++ b/gst-plugins-base/po/tr.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-base 0.10.22.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-08-05 00:36+0100\n"
+"POT-Creation-Date: 2009-08-13 10:58+0100\n"
 "PO-Revision-Date: 2009-06-20 19:33+0200\n"
 "Last-Translator: Server Acim <serveracim@gmail.com>\n"
 "Language-Team: Turkish <gnu-tr-u12a@lists.sourceforge.net>\n"
@@ -120,6 +120,10 @@ msgstr "Bir %s eklenti bu akışı çalmak için gerekli, fakat kurulu değil."
 msgid "This appears to be a text file"
 msgstr "Bu bir metin dosyasına benziyor"
 
+#, fuzzy
+msgid "Could not determine type of stream"
+msgstr "Bir \"typefind\" öğesi oluşturamıyor."
+
 #, c-format
 msgid "Invalid subtitle URI \"%s\", subtitles disabled."
 msgstr "Geçersiz altyazı adresi \"%s\", altyazılar kaldırıldı."
@@ -170,7 +174,20 @@ msgstr "Kayıp öğe '%s' - GStreamer kurulumunu denetleyin."
 msgid "Both autoaudiosink and alsasink elements are missing."
 msgstr "Autoaudiosink ve alsasink öğelerinin ikisi de kayıp."
 
-msgid "Both autovideosink and xvimagesink elements are not working."
+#, fuzzy, c-format
+msgid "Both autovideosink and %s elements are missing."
+msgstr "Autovideosink ve xvimagesink öğelerininin ikisi de kayıp."
+
+#, fuzzy
+msgid "The autovideosink element is missing."
+msgstr "Autovideosink ve xvimagesink öğelerininin ikisi de kayıp."
+
+#, fuzzy, c-format
+msgid "Both autovideosink and %s elements are not working."
+msgstr "Autoaudiosink ve xvimagesink öğelerinin ikisi de çalışmıyor."
+
+#, fuzzy
+msgid "The autovideosink element is not working."
 msgstr "Autoaudiosink ve xvimagesink öğelerinin ikisi de çalışmıyor."
 
 msgid "Custom text sink element is not usable."
@@ -179,13 +196,27 @@ msgstr "Varsayılan metin gömme öğesi kullanılamaz durumda."
 msgid "No volume control found"
 msgstr "Ses denetimi bulunamadı"
 
-msgid "Both autoaudiosink and alsasink elements are not working."
+#, fuzzy, c-format
+msgid "Both autoaudiosink and %s elements are missing."
+msgstr "Autoaudiosink ve alsasink öğelerinin ikisi de kayıp."
+
+#, fuzzy
+msgid "The autoaudiosink element is missing."
+msgstr "Autoaudiosink ve alsasink öğelerinin ikisi de kayıp."
+
+#, fuzzy, c-format
+msgid "Both autoaudiosink and %s elements are not working."
+msgstr "Autoaudiosink ve alsasink öğelerinin ikisi de çalışmıyor."
+
+#, fuzzy
+msgid "The autoaudiosink element is not working."
 msgstr "Autoaudiosink ve alsasink öğelerinin ikisi de çalışmıyor."
 
 msgid "Can't play a text file without video."
 msgstr "Vidyo olmadan metin dosyasını oynatamaz."
 
-msgid "Can't play a text subtitles and subpictures."
+#, fuzzy
+msgid "Can't display both text subtitles and subpictures."
 msgstr "Metin altyazılarını altgörüntülerini oynatamaz."
 
 #, fuzzy
@@ -199,6 +230,10 @@ msgstr "Vfs dosyası kapatılamıyor \"%s\"."
 #, c-format
 msgid "Could not open file \"%s\" for reading."
 msgstr "Dosyayı \"%s\" okumak için açamıyor."
+
+#, fuzzy
+msgid "Internal data flow error."
+msgstr "İç veri akışı hatası."
 
 #, c-format
 msgid "No decoder available for type '%s'."
