--- a/gst-plugins-base/po/zh_CN.po
+++ b/gst-plugins-base/po/zh_CN.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-base 0.10.21.3\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-08-05 00:36+0100\n"
+"POT-Creation-Date: 2009-08-13 10:58+0100\n"
 "PO-Revision-Date: 2009-01-14 12:41+0800\n"
 "Last-Translator: Ji ZhengYu <zhengyuji@gmail.com>\n"
 "Language-Team: Chinese (simplified) <translation-team-zh-cn@lists."
@@ -118,6 +118,10 @@ msgstr "播放此数据流需要 %s 插件，但它未安装。"
 msgid "This appears to be a text file"
 msgstr "此文件是个文本文件"
 
+#, fuzzy
+msgid "Could not determine type of stream"
+msgstr "无法创建“typefind”组件。"
+
 #, c-format
 msgid "Invalid subtitle URI \"%s\", subtitles disabled."
 msgstr "无效的字幕 URI “%s”，不使用字幕。"
@@ -166,8 +170,20 @@ msgstr "未找到组件‘%s’－请检查您的 GStreamer 安装情况。"
 msgid "Both autoaudiosink and alsasink elements are missing."
 msgstr "autovideosink 和 alsasink 组件都缺少。"
 
+#, fuzzy, c-format
+msgid "Both autovideosink and %s elements are missing."
+msgstr "autovideosink 和 xvimagesink 组件都缺少。"
+
 #, fuzzy
-msgid "Both autovideosink and xvimagesink elements are not working."
+msgid "The autovideosink element is missing."
+msgstr "autovideosink 和 xvimagesink 组件都缺少。"
+
+#, fuzzy, c-format
+msgid "Both autovideosink and %s elements are not working."
+msgstr "autovideosink 和 xvimagesink 组件都缺少。"
+
+#, fuzzy
+msgid "The autovideosink element is not working."
 msgstr "autovideosink 和 xvimagesink 组件都缺少。"
 
 msgid "Custom text sink element is not usable."
@@ -176,15 +192,27 @@ msgstr ""
 msgid "No volume control found"
 msgstr "未找到音量控制"
 
+#, fuzzy, c-format
+msgid "Both autoaudiosink and %s elements are missing."
+msgstr "autovideosink 和 alsasink 组件都缺少。"
+
 #, fuzzy
-msgid "Both autoaudiosink and alsasink elements are not working."
+msgid "The autoaudiosink element is missing."
+msgstr "autovideosink 和 alsasink 组件都缺少。"
+
+#, fuzzy, c-format
+msgid "Both autoaudiosink and %s elements are not working."
+msgstr "autovideosink 和 alsasink 组件都缺少。"
+
+#, fuzzy
+msgid "The autoaudiosink element is not working."
 msgstr "autovideosink 和 alsasink 组件都缺少。"
 
 msgid "Can't play a text file without video."
 msgstr "无法播放不带视频的文本文件。"
 
 #, fuzzy
-msgid "Can't play a text subtitles and subpictures."
+msgid "Can't display both text subtitles and subpictures."
 msgstr "无法播放不带视频的文本文件。"
 
 #, fuzzy
@@ -198,6 +226,10 @@ msgstr "无法关闭 vfs 文件“%s”。"
 #, c-format
 msgid "Could not open file \"%s\" for reading."
 msgstr "无法打开文件“%s”读取。"
+
+#, fuzzy
+msgid "Internal data flow error."
+msgstr "内部数据流错误。"
 
 #, c-format
 msgid "No decoder available for type '%s'."
