--- a/gst-plugins-good/po/it.po
+++ b/gst-plugins-good/po/it.po
@@ -5,10 +5,10 @@
 # Luca Ferretti <elle.uca@infinito.it>, 2004, 2005, 2006, 2007, 2008, 2009.
 msgid ""
 msgstr ""
-"Project-Id-Version: gst-plugins-good 0.10.14.2\n"
+"Project-Id-Version: gst-plugins-good 0.10.15.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-08-11 17:17+0100\n"
-"PO-Revision-Date: 2009-05-13 09:21+0200\n"
+"POT-Creation-Date: 2009-08-14 17:38+0100\n"
+"PO-Revision-Date: 2009-08-13 10:51+0200\n"
 "Last-Translator: Luca Ferretti <elle.uca@infinito.it>\n"
 "Language-Team: Italian <tp@lists.linux.it>\n"
 "MIME-Version: 1.0\n"
@@ -175,24 +175,23 @@ msgstr "Impossibile aprire il dispositivo audio per la registrazione."
 msgid "Gain"
 msgstr "Guadagno"
 
-#, fuzzy
 msgid "Built-in Speaker"
-msgstr "Altoparl"
+msgstr "Altop. incorporato"
 
 msgid "Headphone"
-msgstr ""
+msgstr "Cuffia"
 
 msgid "Line Out"
-msgstr ""
+msgstr "Linea out"
 
 msgid "SPDIF Out"
-msgstr ""
+msgstr "SPDIF out"
 
 msgid "AUX 1 Out"
-msgstr ""
+msgstr "AUX 1 out"
 
 msgid "AUX 2 Out"
-msgstr ""
+msgstr "AUX 2 out"
 
 #, c-format
 msgid "Error reading %d bytes from device '%s'."
@@ -255,9 +254,9 @@ msgstr "Impossibile aprire il device «%s» in lettura e scrittura."
 msgid "Device '%s' is not a capture device."
 msgstr "Il device «%s» non è un dispositivo di cattura."
 
-#, fuzzy, c-format
+#, c-format
 msgid "Device '%s' is not a output device."
-msgstr "Il device «%s» non è un dispositivo di cattura."
+msgstr "Il device «%s» non è un dispositivo di uscita."
 
 #, c-format
 msgid "Failed to set norm for device '%s'."
@@ -331,55 +330,3 @@ msgstr "Il cambio della risoluzione a runtime non è ancora supportato."
 
 msgid "Cannot operate without a clock"
 msgstr "Impossibile operare senza un clock"
-
-#~ msgid "Failed to enumerate possible video formats device '%s' can work with"
-#~ msgstr ""
-#~ "Enumerazione dei possibili formati video con cui il device «%s» può "
-#~ "operare non riuscita."
-
-#~ msgid ""
-#~ "The buffer type is not supported, or the index is out of bounds, or no "
-#~ "buffers have been allocated yet, or the userptr or length are invalid. "
-#~ "device %s"
-#~ msgstr ""
-#~ "Il tipo di buffer non è supportato, oppure l'indice è fuori dai limiti, "
-#~ "oppure non è ancora stato allocato alcun buffer, oppure sono non validi "
-#~ "userptr o length. Device %s"
-
-#~ msgid ""
-#~ "Failed trying to get video frames from device '%s'. Not enough memory."
-#~ msgstr ""
-#~ "Tentativo di ottenere fotogrammi video dal device «%s» non riuscito. "
-#~ "Memoria non sufficiente."
-
-#~ msgid "insufficient memory to enqueue a user pointer buffer. device %s."
-#~ msgstr ""
-#~ "memoria insufficiente per accodare un buffer user pointer. Device %s."
-
-#~ msgid "No free buffers found in the pool at index %d."
-#~ msgstr "Non è stato trovato alcun buffer libero nel pool all'indice %d."
-
-#~ msgid "Device '%s' does not support video capture"
-#~ msgstr "Il device «%s» non supporta la cattura video."
-
-#~ msgid "Device '%s' cannot capture at %dx%d"
-#~ msgstr "Il device «%s» non è in grado di catturare a %d×%d"
-
-#~ msgid "Device '%s' cannot capture in the specified format"
-#~ msgstr "Il device «%s» non è in grado di catturare nel formato specificato"
-
-#~ msgid "Could not get buffers from device '%s'."
-#~ msgstr "Impossibile ottenere dei buffer dal device «%s»."
-
-#~ msgid "Could not get enough buffers from device '%s'."
-#~ msgstr "Impossibile ottenere abbastanza buffer dal device «%s»."
-
-#~ msgid "Error starting streaming capture from device '%s'."
-#~ msgstr "Errore nell'avviare la cattura in streaming dal device «%s»."
-
-#~ msgid "Error stopping streaming capture from device '%s'."
-#~ msgstr "Errore nel fermare la cattura in streaming dal device «%s»."
-
-# NdT direi che il punto in fondo è errato nell'originale
-#~ msgid "Failed getting controls attributes on device '%s.'"
-#~ msgstr "Recupero degli attributi dei controlli sul device «%s» non riuscito."
