--- a/gst-plugins-good/po/nl.po
+++ b/gst-plugins-good/po/nl.po
@@ -1,13 +1,13 @@
-# translation of gst-plugins-good-0.10.14.2.nl.po to Dutch
+# translation of gst-plugins-good-0.10.15.2.nl.po to Dutch
 # This file is put in the public domain.
 #
 # Freek de Kruijf <f.de.kruijf@hetnet.nl>, 2007, 2008, 2009.
 msgid ""
 msgstr ""
-"Project-Id-Version: gst-plugins-good 0.10.14.2\n"
+"Project-Id-Version: gst-plugins-good 0.10.15.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2009-08-11 17:17+0100\n"
-"PO-Revision-Date: 2009-05-25 14:29+0200\n"
+"POT-Creation-Date: 2009-08-14 17:38+0100\n"
+"PO-Revision-Date: 2009-08-12 22:49+0200\n"
 "Last-Translator: Freek de Kruijf <f.de.kruijf@hetnet.nl>\n"
 "Language-Team: Dutch <vertaling@vrijschrift.org>\n"
 "MIME-Version: 1.0\n"
@@ -176,24 +176,23 @@ msgstr "Kan het audio-apparaat niet openen voor opnemen."
 msgid "Gain"
 msgstr "Versterking"
 
-#, fuzzy
 msgid "Built-in Speaker"
-msgstr "Luidspreker"
+msgstr "Ingebouwde luidspreker"
 
 msgid "Headphone"
-msgstr ""
+msgstr "Hoofdtelefoon"
 
 msgid "Line Out"
-msgstr ""
+msgstr "Line-out"
 
 msgid "SPDIF Out"
-msgstr ""
+msgstr "SPDIF-out"
 
 msgid "AUX 1 Out"
-msgstr ""
+msgstr "AUX 1-out"
 
 msgid "AUX 2 Out"
-msgstr ""
+msgstr "AUX 2-out"
 
 #, c-format
 msgid "Error reading %d bytes from device '%s'."
@@ -247,9 +246,9 @@ msgstr "Kan apparaat '%s' niet openen voor lezen en schrijven."
 msgid "Device '%s' is not a capture device."
 msgstr "Apparaat '%s' is geen opnameapparaat."
 
-#, fuzzy, c-format
+#, c-format
 msgid "Device '%s' is not a output device."
-msgstr "Apparaat '%s' is geen opnameapparaat."
+msgstr "Apparaat '%s' is geen uitvoerapparaat."
 
 #, c-format
 msgid "Failed to set norm for device '%s'."
@@ -320,50 +319,3 @@ msgstr "Tijdens het draaien kan de resolutie nog niet gewijzigd worden."
 
 msgid "Cannot operate without a clock"
 msgstr "Kan niet werken zonder een klok."
-
-#~ msgid "Failed to enumerate possible video formats device '%s' can work with"
-#~ msgstr ""
-#~ "Kan de mogelijke videoformaten waarmee apparaat '%s' kan werken niet "
-#~ "opnoemen"
-
-#~ msgid ""
-#~ "The buffer type is not supported, or the index is out of bounds, or no "
-#~ "buffers have been allocated yet, or the userptr or length are invalid. "
-#~ "device %s"
-#~ msgstr ""
-#~ "Het type buffer wordt niet ondersteund, of de index is buiten zijn "
-#~ "grenzen, of er zijn nog geen buffers toegewezen, of de pointer of lengte "
-#~ "van de buffer zijn ongeldig.  Apparaat %s"
-
-#~ msgid ""
-#~ "Failed trying to get video frames from device '%s'. Not enough memory."
-#~ msgstr ""
-#~ "Kan geen videoframes verkrijgen van apparaat '%s'. Niet genoeg geheugen."
-
-#~ msgid "insufficient memory to enqueue a user pointer buffer. device %s."
-#~ msgstr ""
-#~ "Onvoldoende geheugen voor het toewijzen van een buffer. Apparaat %s."
-
-#~ msgid "No free buffers found in the pool at index %d."
-#~ msgstr "Geen vrije buffers meer in de pool bij index %d."
-
-#~ msgid "Device '%s' does not support video capture"
-#~ msgstr "Het apparaat '%s' ondersteunt het opnemen van video niet"
-
-#~ msgid "Device '%s' cannot capture at %dx%d"
-#~ msgstr "Apparaat '%s' kan niet opnemen met %dx%d"
-
-#~ msgid "Device '%s' cannot capture in the specified format"
-#~ msgstr "Apparaat '%s' kan niet opnemen in het gespecificeerde formaat"
-
-#~ msgid "Could not get buffers from device '%s'."
-#~ msgstr "Kan geen buffers verkrijgen van apparaat '%s'."
-
-#~ msgid "Could not get enough buffers from device '%s'."
-#~ msgstr "Kan onvoldoende buffers verkrijgen van apparaat '%s'."
-
-#~ msgid "Error starting streaming capture from device '%s'."
-#~ msgstr "Fout bij het starten van een opnamestroom met apparaat '%s'."
-
-#~ msgid "Error stopping streaming capture from device '%s'."
-#~ msgstr "Fout bij het stoppen van een opnamestroom met apparaat '%s'."
